--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "allocine-api": "^0.1.9",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
+    "dotenv": "^5.0.0",
     "express": "^4.16.2",
     "morgan": "^1.9.0",
     "my-google-news": "^3.0.0",
